--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ LOG_LEVEL=info
 APP_KEY=HJbdYpw4-dotal1dkkKxoSGYt9IfqKdV
 NODE_ENV=development
 SESSION_DRIVER=cookie
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=
+DB_DATABASE=
