--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
     "@swc/core": "^1.5.7",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.12.12",
     "eslint": "^8.57.0",
     "hot-hook": "^0.2.6",
@@ -56,6 +57,8 @@
     "@adonisjs/lucid": "^20.6.0",
     "@adonisjs/session": "^7.4.1",
     "@vinejs/vine": "^2.0.0",
+    "luxon": "^3.4.4",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
